[package]
name = "jane-doe"
version = "2025.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
image = "0.25.6"
poise = "0.6.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "http2",
    "rustls-tls-webpki-roots",
    "charset",
    "system-proxy",
    "json",
] }
rustc_version_runtime = "0.3.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.86"
vergen-gitcl = "1.0.0"
